--- a/styles.css
+++ b/styles.css
@@ -243,7 +243,7 @@ nav ul li:hover {
   text-align: center; /* Alineación centrada */
   margin: 20px auto; /* Margen superior e inferior y centrado horizontal */
   background-color: #ffffff; /* Color de fondo claro */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Sombra suave */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5), 0 -2px 4px rgba(0, 0, 0, 0.5); /* Sombras arriba y abajo */
   overflow: hidden; /* Oculta el contenido que desborda */
   align-items: center;
 }
@@ -282,7 +282,7 @@ nav ul li:hover {
   text-align: justify; /* Alineación centrada */
   margin: 20px auto; /* Margen superior e inferior y centrado horizontal */
   background-color: #ffffff; /* Color de fondo claro */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Sombra suave */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5), 0 -2px 4px rgba(0, 0, 0, 0.5); /* Sombras arriba y abajo */
   overflow: hidden; /* Oculta el contenido que desborda */
   align-items: center;
   height: auto;
@@ -316,7 +316,7 @@ nav ul li:hover {
   text-align: justify; /* Alineación centrada */
   margin: 20px auto; /* Margen superior e inferior y centrado horizontal */
   background-color: #ffffff; /* Color de fondo claro */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); /* Sombra suave */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5), 0 -2px 4px rgba(0, 0, 0, 0.5); /* Sombras arriba y abajo */
   overflow: hidden; /* Oculta el contenido que desborda */
   align-items: center;
   height: auto;
@@ -358,9 +358,11 @@ nav ul li:hover {
   min-width: 378px;
   margin: 0 auto; /* Centra el contenedor horizontalmente */
   border-radius: 1px; /* Bordes redondeados */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Sombra suave */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5), 0 -2px 4px rgba(0, 0, 0, 0.5); /* Sombras arriba y abajo */
   overflow: hidden; /* Oculta el contenido que desborda */
   background-color: #ffffff; /* Color de fondo claro */
   padding: 20px; /* Añade espacio interno para el contenido */
   text-align: justify; /* Alineación centrada */
+  margin-top: 5px;
+  margin-bottom: 25px;
 }
